--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -174,6 +174,12 @@
 .timeline-chart rect.interval.conflict {
 	fill: #dc3545;
 }
+.timeline-chart.enough-time rect.interval.conflict {
+	fill: #ffc107;
+}
+.timeline-chart.enough-time .interval-text.conflict {
+	fill: #212529;
+}
 .timeline-chart rect.interval.reference {
 	fill: #000;
 }
