--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -8,7 +8,7 @@ Outreachy Travel Stipend
 
 <h1>What is the travel stipend?</h1>
 
-<p>Attending talks, workshops, and meeting other contributors in person is fun! It can also help you network to get a job. As part of your internship, you have a $500 USD travel stipend. You will not be reimbursed for more than $500.</p>
+<p>Attending talks, workshops, and meeting other contributors in person is fun! It can also help you network to get a job. As part of your internship, you have a $500 USD travel stipend. You will not be reimbursed for more than $500. Reimbursement may take up to 30 days to be processed, so get your reimbursement request in as soon as you complete your blog post.</p>
 
 <p><a href="{% url 'travel-stipend' %}#timeframe">Read the Outreachy policy to determine which events you can use the travel stipend for.</a></p>
 
