Fix HTML in dashboard event templates
Nesting <input> inside <a> doesn't really make sense. In fact I thought
it was prohibited even under HTML5's quite lenient rules, so I'm a
little surprised it ever worked.

This changes how Bootstrap treats the button styling. It now sizes the
button according to the width of the text inside it, instead of using a
fixed width for all buttons. Since some of these buttons were having
their text cut off, that's probably an improvement.

These templates were all also missing closing </p> tags, so I fixed that
too.

--- a/home/templates/home/dashboard/email/application-period-ended.html
+++ b/home/templates/home/dashboard/email/application-period-ended.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-application-period-ended' round_slug=current_round.slug %}"><input class="btn btn-success" value="Contributor Final Email" /></a>
+<p><a href="{% url 'email-application-period-ended' round_slug=current_round.slug %}" class="btn btn-success">Contributor Final Email</a></p>
