--- a/home/templates/home/dashboard/email/contributor-deadline-reminder.html
+++ b/home/templates/home/dashboard/email/contributor-deadline-reminder.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-contributor-deadline-reminder' round_slug=current_round.slug %}"><input class="btn btn-success" value="Contributor Deadline Email" /></a>
+<p><a href="{% url 'email-contributor-deadline-reminder' round_slug=current_round.slug %}" class="btn btn-success">Contributor Deadline Email</a></p>
