--- a/home/templates/home/dashboard/email/deadline-review.html
+++ b/home/templates/home/dashboard/email/deadline-review.html
@@ -2,4 +2,4 @@
 or don't have enough applicants. Send a reminder email to either close their project to new applicants,
 or extend their project deadline by a week (and/or mark their project as needing more applicants).</p>
 
-<p><a href="{% url 'email-deadline-review' round_slug=current_round.slug %}"><input class="btn btn-success" value="Mentor Deadlines Email" /></a>
+<p><a href="{% url 'email-deadline-review' round_slug=current_round.slug %}" class="btn btn-success">Mentor Deadlines Email</a></p>
