--- a/home/templates/home/dashboard/email/intern-welcome.html
+++ b/home/templates/home/dashboard/email/intern-welcome.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-intern-welcome' round_slug=current_round.slug %}"><input class="btn btn-success" value="Intern Welcome Email" /></a>
+<p><a href="{% url 'email-intern-welcome' round_slug=current_round.slug %}" class="btn btn-success">Intern Welcome Email</a></p>
