--- a/home/templates/home/dashboard/email/internship-week-one.html
+++ b/home/templates/home/dashboard/email/internship-week-one.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-internship-week' round_slug=current_round.slug week='one' %}"><input class="btn btn-success" value="Week 1 Email" /></a>
+<p><a href="{% url 'email-internship-week' round_slug=current_round.slug week='one' %}" class="btn btn-success">Week 1 Email</a></p>
