--- a/home/templates/home/dashboard/email/internship-week-seven.html
+++ b/home/templates/home/dashboard/email/internship-week-seven.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-internship-week' round_slug=current_round.slug week='seven' %}"><input class="btn btn-success" value="Week 7 Email" /></a>
+<p><a href="{% url 'email-internship-week' round_slug=current_round.slug week='seven' %}" class="btn btn-success">Week 7 Email</a></p>
