--- a/home/templates/home/dashboard/email/mentor-application-deadline-reminder-early.html
+++ b/home/templates/home/dashboard/email/mentor-application-deadline-reminder-early.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-mentor-application-deadline-reminder' round_slug=current_round.slug %}"><input class="btn btn-success" value="Mentor Deadline Email 2" /></a>
+<p><a href="{% url 'email-mentor-application-deadline-reminder' round_slug=current_round.slug %}" class="btn btn-success">Mentor Deadline Email 2</a></p>
