--- a/home/templates/home/dashboard/email/final-feedback-instructions.html
+++ b/home/templates/home/dashboard/email/final-feedback-instructions.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-final-feedback-instructions' round_slug=current_round.slug %}"><input class="btn btn-success" value="Final Feedback Reminder" /></a>
+<p><a href="{% url 'email-final-feedback-instructions' round_slug=current_round.slug %}" class="btn btn-success">Final Feedback Reminder</a></p>
