--- a/home/templates/home/dashboard/email/internship-week-five.html
+++ b/home/templates/home/dashboard/email/internship-week-five.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-internship-week' round_slug=current_round.slug week='five' %}"><input class="btn btn-success" value="Week 5 Email" /></a>
+<p><a href="{% url 'email-internship-week' round_slug=current_round.slug week='five' %}" class="btn btn-success">Week 5 Email</a></p>
