--- a/home/templates/home/dashboard/email/internship-week-three.html
+++ b/home/templates/home/dashboard/email/internship-week-three.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-internship-week' round_slug=current_round.slug week='three' %}"><input class="btn btn-success" value="Week 3 Email" /></a>
+<p><a href="{% url 'email-internship-week' round_slug=current_round.slug week='three' %}" class="btn btn-success">Week 3 Email</a></p>
