--- a/home/templates/home/dashboard/email/mentor-intern-selection-reminder.html
+++ b/home/templates/home/dashboard/email/mentor-intern-selection-reminder.html
@@ -4,4 +4,4 @@
 </ul>
 </p>
 
-<p><a href="{% url 'email-mentor-intern-selection-reminder' round_slug=current_round.slug %}"><input class="btn btn-success" value="Mentor Intern Selection Email" /></a>
+<p><a href="{% url 'email-mentor-intern-selection-reminder' round_slug=current_round.slug %}" class="btn btn-success">Mentor Intern Selection Email</a></p>
