Change website payment text to match contract.
The Outreachy intern contract outlines that the Software Freedom
Conservancy will issue payment by a specific set of dates. It often
takes up to 10 days for a wire transfer to complete.

The Outreachy website text sets up incorrect expectations by saying that
interns will receive payment by a specific date. That date is actually
when payments will be issued.

Correct the website text to say "payment will be issued by DATE" to make
it inline with what the intern contract says.

--- a/home/templates/home/snippet/payment_schedule.html
+++ b/home/templates/home/snippet/payment_schedule.html
@@ -3,10 +3,10 @@
 <table class=table>
 	<tr><td>{{ current_round.internstarts }}</td><td>Internships starts</td></tr>
 	<tr><td>{{ current_round.initialfeedback }}</td><td>Initial feedback due</td></tr>
-	<tr><td>{{ current_round.initial_stipend_payment_deadline }}</td><td>Interns who have started their internship will receive the ${{ current_round.initialpayment }} initial stipend</td></tr>
+	<tr><td>{{ current_round.initial_stipend_payment_deadline }}</td><td>The ${{ current_round.initialpayment }} initial stipend will be issued to interns with successful initial feedback</td></tr>
 	<tr><td>{{ current_round.midfeedback }} </td><td>Mid-point feedback due</td></tr>
-	<tr><td>{{ current_round.midpoint_stipend_payment_deadline }}</td><td>Interns with successful mid-point feedback will receive the ${{ current_round.midpayment }} midpoint stipend</td></tr>
+	<tr><td>{{ current_round.midpoint_stipend_payment_deadline }}</td><td>The ${{ current_round.midpayment }} midpoint stipend will be issued to interns with successful mid-point feedback</td></tr>
 	<tr><td>{{ current_round.internends }}</td><td>Internships end</td></tr>
 	<tr><td>{{ current_round.finalfeedback }} </td><td>Final feedback due</td></tr>
-	<tr><td>{{ current_round.final_stipend_payment_deadline }}</td><td>Interns with successful final feedback will receive the ${{ current_round.finalpayment }} final stipend</td></tr>
+	<tr><td>{{ current_round.final_stipend_payment_deadline }}</td><td>The ${{ current_round.finalpayment }} final stipend will be issued to interns with successful final feedback</td></tr>
 </table>
