--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -165,11 +165,14 @@ that timeline, taking into account any time commitments the applicant has.
 					{% endif %}
 				</div>
 			</div>
+		{% endif %}
+
 		{% if user.is_staff %}
 			{% include 'home/snippet/time_commitment_overview.html' %}
 		{% else %}
 			{% include 'home/snippet/time_commitment_overview_for_mentor.html' %}
 		{% endif %}
+		
 		<p>Contact Information:</p>
 		<ul>
 			<li>{{ applicant.public_name }} &lt;{{ applicant.account.email }}&gt;</li>
