Don't do a video chat during week one, only a text chat

--- a/home/templates/home/dashboard/email/internship-week-1.html
+++ b/home/templates/home/dashboard/email/internship-week-1.html
@@ -1,4 +1,4 @@
-<p>Week 1: Send a welcome email with information about the week 2 chat and a blog post prompt. Make sure the <a href="{{ current_round.week_two_chat_text_url }}">Outreachy week 2 text chat URL</a> works and the <a href="{{ current_round.week_two_chat_video_url }}">Outreachy week 2 video chat URL</a> works:
+<p>Week 1: Send a welcome email with information about the week 2 chat and a blog post prompt. Make sure the <a href="{{ current_round.week_two_chat_text_url }}">Outreachy week 2 text chat URL</a> works:
 <ul>
 	<li>Send the email on {{ due }}.</li>
 </ul>
