Fix #286 Add prompt to update application

--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -4,6 +4,8 @@
 
 {% if role.needs_application %}
 {% include "home/snippet/eligibility_prompt.html" %}
+{% elif role.application.barrierstoparticipation.applicant_should_update %}
+{% include "home/snippet/pending_prompt.html" %}
 {% elif role.application.is_rejected %}
 {% include "home/snippet/ineligible_prompt.html" %}
 {% elif role.application.is_pending %}
