add fix for incorrect pronoun issue #297

--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -229,7 +229,7 @@ that timeline, taking into account any time commitments the applicant has.
 				<p><i>Applicant has not provided answers to community-specific questions.</i></p>
 				{% endif %}
 				{% if final_application.applying_to_gsoc %}
-				<p><i>Google Summer of Code communities and projects you are applying for, and the mentor contact information for those projects:</i></p>
+				<p><i>Google Summer of Code communities and projects the applicant is applying for, and the mentor contact information for those projects:</i></p>
 				<pre>{{ final_application.applying_to_gsoc }}</pre>
 				{% else %}
 				<p><i>You are not applying to Google Summer of Code.</i></p>
