--- a/home/templates/home/snippet/pending_prompt.html
+++ b/home/templates/home/snippet/pending_prompt.html
@@ -3,7 +3,12 @@
 		<div class="card-header text-white bg-warning">Outreachy Initial Application Under Review</div>
 		<div class="card-body">
 			<p class="card-text">
+			{% if role.application.barrierstoparticipation.applicant_should_update %}
+			You need to <a href="{% url 'essay-revision' applicant_username=request.user.comrade.account.username %}">update your essay questions</a>.
+			The Outreachy organizer found them unclear or not having enough information.
+			{% else %}
 			The Outreachy organizers are reviewing <a href="{% url 'eligibility-results' %}">your initial application</a>.
+			{% endif %}
 			</p>
 			<p class="card-text">
 			Until your initial application is approved, some information about the internships will be hidden,
