fixes #298 - Clarify application experience question on the final application

--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -216,9 +216,9 @@ that timeline, taking into account any time commitments the applicant has.
 					<p><i>(Organizers only) Applicant found out about Outreachy:</i></p>
 					<p>{{ final_application.get_spread_the_word_display }}</p>
 				{% endif %}
-				<p><i>Their experience with this free software community and project:</i></p>
+				<p><i>Their past experience with this free software community and project:</i></p>
 				<pre>{{ final_application.experience }}</pre>
-				<p><i>Their experience with other free software communities:</i></p>
+				<p><i>Their past experience with other free software communities:</i></p>
 				<pre>{{ final_application.foss_experience }}</pre>
 				<p><i>Their relevant personal or class projects that relate to this project:</i></p>
 				<pre>{{ final_application.relevant_projects }}</pre>
