--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -12,6 +12,8 @@ Outreachy eligibility results
 
 	<h1>Initial application approved for Outreachy</h1>
 
+	{% include 'home/set_gmail_filters_warning.html' %}
+
 	<p>Your initial application for Outreachy has been approved. You can now proceed with the next step of your application.
 	</p>
 
@@ -180,6 +182,8 @@ Outreachy eligibility results
 {% elif application.approval_status == application.PENDING %}
 
 	<h1>Your Initial Application is Under Review</h1>
+
+	{% include 'home/set_gmail_filters_warning.html' %}
 
 	<p>
 	Your initial application for Outreachy internships is being reviewed by the Outreachy organizers.
