Fixes #132 - remove deprecated links from opportunities page

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -37,14 +37,12 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://www.collabora.com/about/vacancies">Collabora</a> (Linux kernel, QEMU jobs)  </p></li>
                 <li><p><a href="http://www.debian.org/partners">Debian's partners</a>  </p></li>
                 <li><p><a href="http://www.fsf.org/resources/jobs">FOSS jobs board maintained by the Free Software Foundation</a> (MediaGoblin, FSF jobs would appear here)  </p></li>
-                <li><p><a href="http://osrfoundation.org/jobs/">Open Source Robotics Foundation</a>  </p></li>
                 <li><p><a href="http://www.xenproject.org/about/join.html">Xen Project's advisory board</a>  </p></li>
             </ul>
             <p></p>
             <h3>3-4</h3>
             <ul>
                 <li><p><a href="http://cadasta.org/about-us/careers/">Cadasta</a>  </p></li>
-                <li><p><a href="http://www.codethink.co.uk/company/jobs">Codethink</a> (Linux kernel, GNOME, Python jobs)  </p></li>
                 <li><p><a href="https://jobs.github.com/">GitHub</a>  </p></li>
                 <li><p><a href="http://www.goldmansachs.com/what-we-do/engineering/build-with-us/index.html">Goldman Sachs</a>  </p></li>
                 <li><p><a href="http://www-03.ibm.com/employment/">IBM</a> (QEMU, OpenStack jobs)  </p></li>
@@ -75,19 +73,16 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://jobs.cisco.com/">Cisco</a>  </p></li>
                 <li><p><a href="http://www.cloudera.com/content/cloudera/en/about/careers.html">Cloudera</a>  </p></li>
                 <li><p><a href="https://www.codeweavers.com/about/jobs">CodeWeavers</a> (Wine jobs)  </p></li>
-                <li><p><a href="http://www.elegosoft.com/en/company/careers.html">Elego</a> (Subversion jobs)  </p></li>
                 <li><p><a href="https://endlessm.com/about-us">Endless</a> (GNOME jobs)  </p></li>
                 <li><p><a href="http://evergreen-ils.org/governance/">Evergreen ILS</a>'s board member affiliations  </p></li>
                 <li><p><a href="https://careers-redhat.icims.com/jobs/search?Keyword=fedora">Fedora</a>  </p></li>
                 <li><p><a href="https://www.igalia.com/about-us">Igalia</a>  </p></li>
                 <li><p><a href="http://www.joomla.org/about-joomla/the-project/partners.html">Joomla's partners</a>  </p></li>
-                <li><p><a href="http://www.kdab.com/about-us/careers-at-kdab">KDAB</a> (KDE jobs)  </p></li>
                 <li><p><a href="https://libav.org">Libav</a>  </p></li>
                 <li><p><a href="https://www.lightbend.com/company/careers">Lightbend</a> (Lagom jobs)  </p></li>
                 <li><p><a href="http://www.linaro.org/careers/linaro">Linaro</a> (Linux Kernel jobs)  </p></li>
                 <li><p><a href="https://mapzen.com/jobs/">Mapzen</a> (OpenStreetMap jobs)  </p></li>
                 <li><p><a href="http://mifos.org/about-us/team/">Mifos</a> team and partners  </p></li>
-                <li><p><a href="http://www.nescent.org/about/partners.php">NESCent's partners</a>  </p></li>
                 <li><p><a href="https://nodejs.org/en/foundation/members/">Node.js Foundation corporate members</a>  </p></li>
                 <li><p><a href="http://openmrs.org/about/jobs">OpenMRS</a>  </p></li>
                 <li><p><a href="https://www.shopify.com/careers">Shopify</a>  </p></li>
@@ -102,8 +97,8 @@ Outreachy | Opportunities with Sponsors - Outreachy
             <li><br/></li>
             <li><p><a href="https://www.recurse.com/">The Recurse Center</a> </p></li>
             <li><p><a href="http://www.fossjobs.net">FOSS jobs board maintained by Moritz Bartl</a> </p></li>
-            <li><p>Sumana Harihareswara's round-ups of various opportunities on <a href="http://www.harihareswara.net/sumana/2014/03/06/">March 2014</a>, <a href="https://wiki.gnome.org/%5B%5Bhttp%3A//www.harihareswara.net/sumana/2012/12/01/0">December 2012</a> </p></li>
-            <li><p>Sumana Harihareswara's <a href="https://wiki.gnome.org/www.harihareswara.net/sumana/2013/03/31/0">Round-up of NYC organizations</a> </p></li>The list of <a href="https://openhatch.org/wiki/Opportunities">paid opportunities in FOSS</a> maintained by OpenHatch<br/><br/><a href="http://opensourcediversity.org/">List of Open Source Diversity initiatives</a>.<br/> <p><br/></p>
+            <li><p>Sumana Harihareswara's round-ups of various opportunities on <a href="http://www.harihareswara.net/sumana/2014/03/06/">March 2014</a> </p></li>
+            The list of <a href="https://openhatch.org/wiki/Opportunities">paid opportunities in FOSS</a> maintained by OpenHatch<br/><br/><a href="http://opensourcediversity.org/">List of Open Source Diversity initiatives</a>.<br/> <p><br/></p>
         </div>
 </div>
 
