Fixes #132 - bonus stuff, add more links to the section for more opportunities

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -93,11 +93,16 @@ Outreachy | Opportunities with Sponsors - Outreachy
             </ul>
             <p></p>
             <h2>More opportunities</h2>
-            <li><a href="https://developers.google.com/open-source/gsoc/">Google Summer of Code</a></li>
-            <li><br/></li>
-            <li><p><a href="https://www.recurse.com/">The Recurse Center</a> </p></li>
-            <li><p><a href="http://www.fossjobs.net">FOSS jobs board maintained by Moritz Bartl</a> </p></li>
-            <li><p>Sumana Harihareswara's round-ups of various opportunities on <a href="http://www.harihareswara.net/sumana/2014/03/06/">March 2014</a> </p></li>
+            <ul>
+                <li><p><a href="https://developers.google.com/open-source/gsoc/">Google Summer of Code</a> </p></li>
+                <li><p><a href="https://www.recurse.com/">The Recurse Center</a> </p></li>
+                <li><p><a href="http://www.fossjobs.net">FOSS jobs board maintained by Moritz Bartl</a> </p></li>
+                <li><p>Sumana Harihareswara's round-ups of various opportunities on <a href="http://www.harihareswara.net/sumana/2014/03/06/">March 2014</a> </p></li>
+                <li><p><a href="https://www.blacksintechnology.net/jobs-board/">Blacks in Tech jobs board</a> </p></li>
+                <li><p><a href="https://www.pocitjobs.com/">People of Color in Tech jobs board</a> </p></li>
+                <li><p><a href="https://www.womenwhocode.com/jobs/">Women Who Code jobs board</a> </p></li>
+                <li><p><a href="https://careers.aises.org/">American Indian Science and Engineering Society</a> </p></li>
+            </ul>
             The list of <a href="https://openhatch.org/wiki/Opportunities">paid opportunities in FOSS</a> maintained by OpenHatch<br/><br/><a href="http://opensourcediversity.org/">List of Open Source Diversity initiatives</a>.<br/> <p><br/></p>
         </div>
 </div>
