--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -22,20 +22,11 @@
 
 	<p>For the current list of internships, <a href="/apply/project-selection">see the current round page</a></p>
 
-	<p>The timeline for this round is:</p>
-
-	<table class=table>
-		<tr><td>{{ page.specific.landingdue }}</td><td>Most FOSS communities will be listed</td></tr>
-		<tr><td>{{ page.specific.appsopen }}</td><td>Applications open</td></tr>
-		<tr><td>{{ page.specific.lateorgs }}</td><td>Last date for new FOSS community listings</td></tr>
-		<tr><td>{{ page.specific.appsclose }}</td><td>Applications and contributions deadline</td></tr>
-		<tr><td>{{ page.specific.appslate }}</td><td>Deadline for late applications and contributions for specific projects (see below for which projects are accepting late applications)</td></tr>
-		<tr><td>{{ page.specific.appsclose }} to {{ page.specific.internannounce }}</td><td>Applicants are encouraged to continue making contributions for the project they applied for</td></tr>
-		<tr><td>{{ page.specific.internannounce }}</td><td>Accepted interns announced on this page at 4pm UTC</td></tr>
-		<tr><td>{{ page.specific.internstarts }} to {{ page.specific.internends }}</td><td>Internships period</td></tr>
-	</table>
+	{% with current_round=page.specific %}
+	{% include 'home/snippet/round_timeline.html' %}
+	{% endwith %}
 	{% with current_round=page %}
-		{% include 'home/snippet/payment_schedule.html' %}
+	{% include 'home/snippet/payment_schedule.html' %}
 	{% endwith %}
 	{{ page.specific.sponsordetails|richtext }}
 
