--- a/home/templates/home/snippet/payment_schedule.html
+++ b/home/templates/home/snippet/payment_schedule.html
@@ -1,12 +1,12 @@
 
 <h2>Intern Payment Schedule</h2>
-<table class=table>
-	<tr><td>{{ current_round.internstarts }}</td><td>Internships starts</td></tr>
-	<tr><td>{{ current_round.initialfeedback }}</td><td>Initial feedback due</td></tr>
-	<tr><td>{{ current_round.initial_stipend_payment_deadline }}</td><td>The ${{ current_round.initialpayment }} initial stipend will be issued to interns with successful initial feedback</td></tr>
-	<tr><td>{{ current_round.midfeedback }} </td><td>Mid-point feedback due</td></tr>
-	<tr><td>{{ current_round.midpoint_stipend_payment_deadline }}</td><td>The ${{ current_round.midpayment }} midpoint stipend will be issued to interns with successful mid-point feedback</td></tr>
-	<tr><td>{{ current_round.internends }}</td><td>Internships end</td></tr>
-	<tr><td>{{ current_round.finalfeedback }} </td><td>Final feedback due</td></tr>
-	<tr><td>{{ current_round.final_stipend_payment_deadline }}</td><td>The ${{ current_round.finalpayment }} final stipend will be issued to interns with successful final feedback</td></tr>
+<table class="table">
+	<tr><th width="175">{{ current_round.internstarts }}</th><td>Internships starts</td></tr>
+	<tr><th>{{ current_round.initialfeedback }}</th><td>Initial feedback due</td></tr>
+	<tr><th>{{ current_round.initial_stipend_payment_deadline }}</th><td>The ${{ current_round.initialpayment }} initial stipend will be issued to interns with successful initial feedback</td></tr>
+	<tr><th>{{ current_round.midfeedback }} </th><td>Mid-point feedback due</td></tr>
+	<tr><th>{{ current_round.midpoint_stipend_payment_deadline }}</th><td>The ${{ current_round.midpayment }} midpoint stipend will be issued to interns with successful mid-point feedback</td></tr>
+	<tr><th>{{ current_round.internends }}</th><td>Internships end</td></tr>
+	<tr><th>{{ current_round.finalfeedback }} </th><td>Final feedback due</td></tr>
+	<tr><th>{{ current_round.final_stipend_payment_deadline }}</th><td>The ${{ current_round.finalpayment }} final stipend will be issued to interns with successful final feedback</td></tr>
 </table>
