--- a/home/templates/home/dashboard/staff_subscriptions.html
+++ b/home/templates/home/dashboard/staff_subscriptions.html
@@ -8,8 +8,22 @@ for communities that are approved to participate in a round.
 </p>
 
 <p>
-Outreachy organizers can see the <a href="{% url 'trusted-volunteers-list' %}">full list of email addresses</a>
+During the application period, Outreachy organizers can see the
+<a href="{% url 'trusted-volunteers-list' %}">full list of approved volunteer email addresses</a>
 for all approved community coordinators and mentors with approved projects.
+</p>
+
+<p>
+Once all intern selections are approved by Outreachy organizers, they can see the
+<a href="{% url 'active-trusted-volunteers-list' %}">full list of active volunteer email addresses</a>
+for the intern's mentors who signed the mentor contract,
+and all approved community coordinators for communities who selected an intern.
+(This list excludes mentors and communities who don't have an approved intern.
+Mentors and coordinators will disappear from this list once their regular or
+extended internship ends.)
+</p>
+
+<p>
 Then subscribe them using the following links (anyone already subscribed won't be subscribed again):
 </p>
 <ul>
