--- a/home/templates/home/dashboard/email/internship-week-7.html
+++ b/home/templates/home/dashboard/email/internship-week-7.html
@@ -1,4 +1,4 @@
-<p>Week 7: Topic is "Modifying Expectations." Make sure the <a href="{{ current_round.week_seven_timeline_chat_url }}">Outreachy topic URL</a> is created for the discussion on {{ current_round.week_eight_chat_date }}. Send another blog post prompt:
+<p>Week 7: Topic is "Modifying Expectations." Make sure the <a href="{{ current_round.week_seven_timeline_chat_url }}">Outreachy topic URL</a> is created for the discussion on {{ current_round.week_eight_chat_text_date }}. Send another blog post prompt:
 <ul>
 	<li>Send the email after {{ due }}.</li>
 </ul>
