--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -45,7 +45,7 @@
 	{% if project.deadline == project.LATE %}
 		<p>Deadline is {{ current_round.appslate }} 4pm UTC to record your contributions and create a final application. You will not be able to edit your final application or record more contributions after this date.</p>
 	{% else %}
-		<p>Deadline is {{ current_round.appsclose }} 4pm UTC to record your contributions and create a final application. You will not be able to edit your final application or record more contributions after this date.</p>
+		<p>Deadline is {{ current_round.appslate }} 4pm UTC to record your contributions and create a final application. You will not be able to edit your final application or record more contributions after this date.</p>
 	{% endif %}
 
 	<p>
@@ -69,7 +69,7 @@
 	{% if project.deadline == project.LATE %}
 		<p>Deadline was {{ current_round.appslate }} 4pm UTC to record your contributions and create a final application.
 	{% else %}
-		<p>Deadline was {{ current_round.appsclose }} 4pm UTC to record your contributions and create a final application.
+		<p>Deadline was {{ current_round.appslate }} 4pm UTC to record your contributions and create a final application.
 	{% endif %}
 	{% if final_application %}
 		Since you submitted a final application by the deadline, you are eligible to be selected as an intern for this project. You may continue recording your contributions to this project until the intern announcement on {{ current_round.internannounce }} at 4pm UTC.</p>
@@ -134,7 +134,7 @@
 		{% endif %}
 		If you wish to withdraw your application, there is a button at the bottom of your application to do so.<p>
 
-		<p>After the application deadline ({{ current_round.appsclose }})
+		<p>After the application deadline ({{ current_round.appslate }})
 		or the late application deadline ({{ current_round.appslate }}),
 		project mentors will take a couple weeks to decide who they want to accept as an intern.
 		They will review all applications in the application system,
