--- a/home/templates/home/snippet/apply_prompt.html
+++ b/home/templates/home/snippet/apply_prompt.html
@@ -10,9 +10,9 @@
 		</p>
 		<p class="card-text">
 		{% if not current_round.has_ontime_application_deadline_passed %}
-			The application deadline is {{ current_round.appsclose|date:"F d, Y" }}. Some projects are open to late applications, and their application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
+			The application deadline is {{ current_round.appslate|date:"F d, Y" }}. Some projects are open to late applications, and their application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
 		{% elif not current_round.has_late_application_deadline_passed %}
-			The application deadline for most projects was {{ current_round.appsclose|date:"F d, Y" }}. Some projects are open to late applications, and their application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
+			The application deadline for most projects was {{ current_round.appslate|date:"F d, Y" }}. Some projects are open to late applications, and their application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
 		{% else %}
 			The late application deadline was {{ current_round.appslate|date:"F d, Y" }}. All project application deadlines have now passed. Your project applications will be reviewed.
 		{% endif %}
@@ -32,7 +32,7 @@
 		<strong>Your next step is to create a final application.</strong> You will need to create a final application for each project, in order to be eligible to be selected as an intern for that project.
 		</p>
 		<p class="card-text">
-		The final application deadline is {{ current_round.appsclose|date:"F d, Y" }}. Some projects are open to late final applications, and their final application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
+		The final application deadline is {{ current_round.appslate|date:"F d, Y" }}. Some projects are open to late final applications, and their final application deadline will be {{ current_round.appslate|date:"F d, Y" }}.
 		</p>
 {% endif %}
 	<h5 class="card-text">My Contributions</h5>
