--- a/home/templates/home/snippet/project_deadline.html
+++ b/home/templates/home/snippet/project_deadline.html
@@ -5,7 +5,7 @@
 {% else %}
 	<p>Deadline
 	{% if not project.has_application_deadline_passed %}is{% else %}was{% endif %}
-	{{ current_round.appsclose }}
+	{{ current_round.appslate }}
 {% endif %}
 to
 {% if role.application.is_approved and not project.has_application_deadline_passed %}<a href="{{ project.get_contributions_url }}">{% endif %}
