--- a/home/templates/home/dashboard/email/application-period-ended.html
+++ b/home/templates/home/dashboard/email/application-period-ended.html
@@ -1,5 +1,5 @@
-<p>Once the late project deadline has passed, email contributors about the round ending:
+<p>Once the contribution deadline has passed, email contributors about the round ending:
 <ul>
-	<li>After the first application period deadline. Send the email on {{ due }} after 4pm UTC.</li>
+	<li>Send the email on {{ due }} after 4pm UTC.</li>
 </ul>
 </p>
