--- a/home/templates/home/dashboard/email/coordinator-intern-selection-reminder.html
+++ b/home/templates/home/dashboard/email/coordinator-intern-selection-reminder.html
@@ -1,5 +1,5 @@
-<p>Once the late project deadline has passed, email mentors and coordinators with instructions on how to select their intern:
+<p>After the contribution period is finished, email mentors and coordinators with instructions on how to select their intern:
 <ul>
-	<li>After the first application period deadline. Send the email on {{ due }} after 4pm UTC.</li>
+	<li>Send the email on {{ due }} after 4pm UTC.</li>
 </ul>
 </p>
