--- a/home/templates/home/dashboard/email/deadline-reminder.html
+++ b/home/templates/home/dashboard/email/deadline-reminder.html
@@ -1,2 +1,2 @@
-<p>Once mentors have had a couple days to mark their project as closed, late, or needs promotion,
+<p>Once mentors have had a couple days to mark their project as closed to new contributors,
 you can send an email to the announcements mailing list to remind applicants of the upcoming deadlines:</p>
