--- a/home/templates/home/snippet/projects_for_round_page.html
+++ b/home/templates/home/snippet/projects_for_round_page.html
@@ -1,8 +1,5 @@
 {% for project in projects %}
-	{% if project.needs_more_applicants and project.approval_status == project.APPROVED %}
-	<div class="card border border-success" id="{{ project.project_round.community.slug}}-{{ project.slug }}">
-		<div class="card-header bg-success text-light">
-	{% elif project.approval_status != project.APPROVED %}
+	{% if project.approval_status != project.APPROVED %}
 	<div class="card border border-warning" id="{{ project.project_round.community.slug}}-{{ project.slug }}">
 		<div class="card-header bg-warning text-light">
 	{% else %}
@@ -18,14 +15,6 @@
 			<div class="card-text">{% include 'home/snippet/project_hidden.html' %}</div>
 		{% else %}
 			<p><strong><a href="{% url 'community-landing' round_slug=current_round.slug community_slug=project.project_round.community.slug %}#{{ project.slug }}">{{ project.short_title }}</a></strong></p>
-		{% endif %}
-
-		{% if project.needs_more_applicants %}
-			{% if not project.has_application_deadline_passed %}
-				<p>This project has a low number of applicants, and the project mentor welcomes new applicants to contribute.</p>
-			{% else %}
-				<p>This project had a low number of applicants</p>
-			{% endif %}
 		{% endif %}
 
 		{% include "home/snippet/project_deadline.html" %}
