--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -70,7 +70,7 @@ Past community participation in Outreachy
 		    {% if not current_round.has_project_submission_and_approval_deadline_passed %}
 			    Mentors are encouraged to start promoting their project proposals as soon as the Outreachy round opens on {{ current_round.appsopen }}.
 		    {% elif not current_round.has_application_deadline_passed %}
-			    Mentors are encouraged to make sure applicants record their contributions and submit a final application before the project application deadline.
+			    Mentors are encouraged to make sure applicants record their contributions and submit a final application before the final application deadline.
 		    {% endif %}
 		    </p>
 		    <table class=table>
