Remove some instances of project deadlines in templates

--- a/home/templates/home/dashboard/email/mentor-intern-selection-reminder.html
+++ b/home/templates/home/dashboard/email/mentor-intern-selection-reminder.html
@@ -1,4 +1,4 @@
-<p>Once the first project deadline has passed, email mentors to remind them who has applied and that they can extend their project deadline:
+<p>Once the contribution period has passed, email mentors to tell them to select their intern:
 <ul>
 	<li>After the first application period deadline. Send the email on {{ due }} after 4pm UTC.</li>
 </ul>
