--- a/home/templates/home/snippet/deadline_passed.html
+++ b/home/templates/home/snippet/deadline_passed.html
@@ -1,6 +1,6 @@
 <p>
-All application deadlines for <a href="/apply/project-selection">listed projects</a> have passed.
-At this time, we are no longer accepting final applications for internships, and you have not submitted a final application.
+The final application deadline for <a href="/apply/project-selection">Outreachy projects</a> has passed.
+We are no longer accepting final applications for internships, and you did not submit a final application.
 We encourage you to sign up for the
 <a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">announcements mailing list</a>
 to get an email when the next round opens.
